--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,48 @@
+body {
+  background-color:#fff8dc;
+}
 
+.container {
+  max-width: 320px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* Header */
+header {
+  margin: 2rem 0;
+  text-align: center;
+  color: #808080;
+}
+
+/* Input boxes */
+.container h1, .container p {
+  color: #808080;
+}
+
+.container p {
+  font-size: 1rem;
+}
+
+
+
+/* Calculate buttone */
+.btn-success, .btn-success:focus {
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.3);
+  background-color: #ff6363;
+  border-color: #ff6363;
+}
+
+.btn-success:hover {
+  background-color: #e06262;
+  border-color: #e06262;
+}
+
+/* Results */
+.results {
+  background-color: rgba(100, 89, 77, 0.2);
+  max-width: 285px;
+  padding: 5px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4);
+}
